# python-design-patterns

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml
design_patterns/: chain_of_responsibility.py  command.py  mediator.py  memento.py  observer.py  utils.py
design_patterns/utils/: counter.py  id_generator.py  runnable.py
tests/: test_chain_of_responsibility.py  test_command.py  test_mediator.py  test_memento.py  test_observer.py
